wrap bug fix

--- a/ya/blocks/download.css
+++ b/ya/blocks/download.css
@@ -1,26 +1,26 @@
 .download {
+    position: fixed;
+    right: 10px;
+    top: 10px;
+    padding: 10px;
     width: 340px;
     height: 40px;
-    padding: 10px;
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    background-color: var(--backgroundColorWhite);
     display: flex;
-    flex-direction: row;
-    z-index: 2;
     border-radius: 25px;
     overflow: hidden;
+    z-index: 2;
+    background-color: var(--backgroundColorWhite);
 }
 
 .download__link {
-    font-size: 20px;
     font-family: 'Golos Text', sans-serif;
+    font-size: 20px;
     color: var(--backgroundColorBlack);
     line-height: 20px;
     text-decoration: none;
     text-transform: uppercase;
     text-wrap: nowrap;
+    white-space: nowrap;
 }
 
 .download__hide {
